# PRISM

./: .gitignore  README.md  config.py  index.html
c_device/: CMakeLists.txt
c_device/libmodbus/include/: ModbusController.h
c_device/libmodbus/lib/: modbus.lib
c_device/libmodbus/scripts/: ModbusController.cpp
c_device/nachi/include/: OpenNR-IF.h  nachi_api.h  robot_socket.h
c_device/nachi/lib/: OpenNR-CE.cpp  nachi_api.cpp  robot_socket.cpp
c_device/nachi/scripts/: execute_external_tracking.cpp  external_tracking.cpp  external_tracking_1.cpp
c_device/specim/example/: spectralcamera.h
c_device/specim/examples_official/example1/: example1.sln
c_device/specim/examples_official/example1/example1/: example1.cpp  example1.vcxproj  example1.vcxproj.filters
c_device/specim/examples_official/example2/: example2.sln
c_device/specim/examples_official/example2/example2/: example2.cpp  example2.vcxproj  example2.vcxproj.filters
c_device/specim/examples_official/example3/: example3.sln
c_device/specim/examples_official/example3/example3/: example3.cpp  example3.vcxproj  example3.vcxproj.filters
c_device/specim/include/: socket.h  specim_camera.h
c_device/specim/lib/: specim_camera.cpp
c_device/specim/scripts/: socket.cpp  specim.cpp
config/: animation.yaml  chessboard.yaml  cloth_grasp.yaml  nachi.yaml  rgb_camera.yaml  spectral_camera.yaml  train.yaml
scripts/: capture_hyperspectral_image_prism.py  test.py  train.py
src/: common.py  data_types.py  modbus_suction.py  robot_calibration.py  robotics.py  spectral_image_receiver.py  transform.py  utilize.py  utils.py
src/datasets/: __init__.py  (+4 more)
(+15 files in other folders)
